@@ -24,7 +24,13 @@ apply from: "${rootDir}/buildSrc/src/main/groovy/org.apache.fineract.dependencie
 
 jib {
     from {
-        image = 'azul/zulu-openjdk-alpine:17'
+        image = 'azul/zulu-openjdk-alpine:21'
+        platforms {
+            platform {
+                architecture = System.getProperty("os.arch").equals("aarch64")?"arm64":"amd64"
+                os = 'linux'
+            }
+        }
     }
 
     to {
@@ -38,22 +44,6 @@ jib {
     container {
         creationTime = 'USE_CURRENT_TIMESTAMP'
         mainClass = 'org.apache.fineract.ServerApplication'
-        jvmFlags = [
-            '-Xms1G',
-            '-XshowSettings:vm',
-            '-XX:+UseContainerSupport',
-            '-XX:+UseStringDeduplication',
-            '-XX:MinRAMPercentage=25',
-            '-XX:MaxRAMPercentage=80',
-            '--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-            '--add-opens=java.base/java.io=ALL-UNNAMED',
-            '--add-opens=java.base/java.security=ALL-UNNAMED',
-            '--add-opens=java.base/java.util=ALL-UNNAMED',
-            '--add-opens=java.management/javax.management=ALL-UNNAMED',
-            '--add-opens=java.naming/javax.naming=ALL-UNNAMED'
-        ]
         args = [
             '-Duser.home=/tmp',
             '-Dfile.encoding=UTF-8',
@@ -68,6 +58,7 @@ jib {
     allowInsecureRegistries = true
 
     dependencies {
+        implementation project(':fineract-core')
         implementation project(':fineract-provider')
         // NOTE: dynamically load all custom modules
         file("${rootDir}/custom").eachDir { companyDir ->
@@ -85,7 +76,7 @@ jib {
         }
         // NOTE: other custom dependencies
         implementation 'org.mariadb.jdbc:mariadb-java-client'
-        implementation 'mysql:mysql-connector-java:8.0.31'
+        implementation 'com.mysql:mysql-connector-j'
         implementation 'org.postgresql:postgresql'
         annotationProcessor('org.springframework.boot:spring-boot-autoconfigure-processor')
         annotationProcessor('org.springframework.boot:spring-boot-configuration-processor')
@@ -104,5 +95,3 @@ jib {
         }
     }
 }
-
-// tasks.jibDockerBuild.dependsOn(':fineract-provider:bootJar')
